made changes per Alexanders review and suggestions

--- a/index.html
+++ b/index.html
@@ -25,39 +25,76 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item active">
                   <i class="bi bi-envelope"></i> Inbox  820</li>
-                  <li class="list-group-item">
+                  <li class="list-group-item-action d-md-block">
                     <i class="bi bi-file-earmark"></i> Drafts</li>
-                    <li class="list-group-item">
+                    <li class="list-group-item-action d-md-block">
                         <i class="bi bi-send-check"></i> Sent</li>
-                <li class="list-group-item">
+                <li class="list-group-item-action d-md-block">
                   <i class="bi bi-envelope-slash"></i> Junk</li>
-                  <li class="list-group-item">
+                  <li class="list-group-item-action  d-md-block">
                     <i class="bi bi-star"></i> Saved</li>
-                <li class="list-group-item d-none d-md-block"><i class="bi bi-trash"></i>Trash</li>
-              </ul>
-              
+                <li class="list-group-item-action d-md-block"><i class="bi bi-trash"></i>Trash</li>
+              </ul>  
             </div>
             <div class="  col-md-8  block-two vh-100">
               <ul class="list-group list-group-flush first-list container-two">
-                <li class="list-group-item  active first-item"> <i class="bi bi-square"></i> Apple <br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.
-                </li>
-                <li class="list-group-item"><i class="bi bi-square"></i> Ogio <br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
-                    <li class="list-group-item"><i class="bi bi-square"></i> 99 Cents <br>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
-                  <li class="list-group-item"><i class="bi bi-square"></i> Yahoo <br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
-                  <li class="list-group-item"><i class="bi bi-square"></i> IRS <br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
-                  <li class="list-group-item"><i class="bi bi-square"></i> In-Shape City <br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
-                  <li class="list-group-item"><i class="bi bi-square"></i> Marvel Comics <br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
-                    <li class="list-group-item"><i class="bi bi-square"></i> Disney <br>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
-                    <li class="list-group-item"><i class="bi bi-square"></i> Hay House Radio <br>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</li>
+                <li class="list-group-item active d-md-block first-item">
+                    <div class="d-flex">
+                        <input class="form-check-input me-2" type="checkbox" value="" id="firstCheckbox">
+                        <h5>Apple</h5>
+                        </div>
+                       <small>Introducing the new pro app, Final Cut Pro for iPad, designed for creating with the power, touch display, and portability of iPad.</small>
+                    </li>
+                    <li class="list-group-item-action d-md-block second-item">
+                        <div class="d-flex">
+                            <input class="form-check-input me-2" type="checkbox" value="" id="secondCheckbox">
+                            <h5>99 Cents</h5>
+                            </div>
+                           <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</small>
+                    </li>
+                      <li class="list-group-item-action d-md-block third-item">
+                            <div class="d-flex">
+                                <input class="form-check-input me-2" type="checkbox" value="" id="thirdCheckbox">
+                                <h5>Yahoo</h5>
+                                </div>
+                               <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</small>
+                            </li>
+                            <li class="list-group-item-action d-md-block fourth-item">
+                                <div class="d-flex">
+                                    <input class="form-check-input me-2" type="checkbox" value="" id="fourthCheckbox">
+                                    <h5>IRS</h5>
+                                    </div>
+                                   <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</small>
+                                </li>
+                                <li class="list-group-item-action d-md-block fifth-item">
+                                    <div class="d-flex">
+                                        <input class="form-check-input me-2" type="checkbox" value="" id="fifthCheckbox">
+                                        <h5>In-Shape City</h5>
+                                    </div>
+                                       <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</small>
+                                </li>
+                                <li class="list-group-item-action d-md-block sixth-item">
+                                    <div class="d-flex">
+                                        <input class="form-check-input me-2" type="checkbox" value="" id="sixthCheckbox">
+                                        <h5>Marvel Comics</h5>
+                                    </div>
+                                        <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</small>
+                                </li>
+                                <li class="list-group-item-action d-md-block eight-item">
+                                  <div class="d-flex">
+                                      <input class="form-check-input me-2" type="checkbox" value="" id="seventhCheckbox">
+                                      <h5>Disney</h5>
+                                  </div>
+                                      <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</small>
+                              </li>
+                              <li class="list-group-item-action d-md-block eight-item">
+                                <div class="d-flex">
+                                    <input class="form-check-input me-2" type="checkbox" value="" id="eightCheckbox">
+                                    <h5>Hay House Radio</h5>
+                                </div>
+                                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et odio tempus, interdum purus sit amet, fermentum eros.</small>
+                            </li>
+                        
               <div class="d-flex  vh-100">
                 <button type="button" class=" btn btn-info compose-button d-block d-sm-none">
                   Compose
